--- a/modules/odr_frontend/src/app.html
+++ b/modules/odr_frontend/src/app.html
@@ -1,13 +1,13 @@
 <!-- SPDX-License-Identifier: Apache-2.0 -->
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en" class="dark" data-theme="omi-custom-theme">
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta charset="utf-8">
+		<link rel="icon" href="%sveltekit.assets%/favicon.png">
+		<meta name="viewport" content="width=device-width">
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="omi-custom-theme">
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
