--- a/modules/odr_frontend/src/app.html
+++ b/modules/odr_frontend/src/app.html
@@ -3,7 +3,7 @@
 <html lang="en" class="dark" data-theme="omi-custom-theme">
 	<head>
 		<meta charset="utf-8">
-		<link rel="icon" href="%sveltekit.assets%/favicon.png">
+		<link rel="icon" href="%sveltekit.assets%/favicon.webp">
 		<meta name="viewport" content="width=device-width">
 		%sveltekit.head%
 	</head>
